# Napasserelle

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
script/: full-install-windows-pypi0.bat  full-install-windows.bat
script/autres_scripts/: full-install-windows-github.bat  full-install-windows-pypi.bat
src/napari_segmentation/: Cleaner.py  Ia.py  Photo_input.py  __init__.py  __yolo_utils.py  _modification_widget.py  _widget.py  detecteur.py  napari.yaml
src/napasserelle/: Photo_input.py  __init__.py  _widget.py  detecteur.py  napari.yaml
