[project]
name = "napari_segmentation"
version = "0.0.1"
classifiers = [
    "Framework :: napari",
]
dependencies = ["napari"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."napari.manifest"]
napari_segmentation = "napari_segmentation:napari.yaml"
