[project]
name = "napari_segmentation"
dynamic = ["version"]
description = "Plugin napari pour fabriquer, superviser et traiter des masques de segmentation binaire à partir d'un modèle de segmentation-models-pytorch."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Maxence Chédor"},
  {email = "maxence.chedor@alumni.inp-n7.fr"}
]
classifiers = [
    "Framework :: napari",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9"
dependencies = [
    "qtpy",
    "numpy",
    "opencv-python",

]

[project.optional-dependencies]

ai = ["segmentation-models-pytorch","albumentations"]
all = ["napari[all]", "segmentation-models-pytorch", "albumentations"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."napari.manifest"]
napari_segmentation = "napari_segmentation:napari.yaml"


[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "SIM117",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true